@@ -1,4 +1,4 @@
 appliedkernels="2.6.14"
-source="software-suspend-2.2-rc8-for-${appliedkernels}.patch.bz2"
+source="software-suspend-2.2-rc9-for-${appliedkernels}.patch.bz2"
 source_url="http://download.sourcemage.org/distro/kernel/${source}"
 source_gpg="gurus.gpg:info/patches-sigs/sws2_patches/${source}.sig"
