@@ -1,3 +1,10 @@
+2005-11-05 Eric Sandall <eric@sandall.us>
+	* info/patches/sws2_patches/software-suspend-2.2-rc8-for-2.6.14.patch:
+	  Removed (didn't cleanly apply to 2.6.14)
+	* info/patches/sws2_patches/software-suspend-2.2-rc9-for-2.6.14.patch:
+	  Added
+	* info/patches/gensplash_patches/fbsplash-0.9.2-r5-2.6.14.patch: Added
+
 2005-11-03 Eric Sandall <eric@sandall.us>
 	* info/patches/sws2_patches/software-suspend-2.2-{rc7-for-2.6.13,
 	  rc8-for-2.6.14}.patch: Added
